tests/A2/reject/arrayReject3.ul
float[3] foo(){
    float[3] x; 
    return x;
}

void main(){
    int[3] x;
    x = foo();
}